--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "vite build",
+    "typecheck": "tsc -b",
     "preview": "vite preview",
     "test": "vitest"
+  },
+  "engines": {
+    "node": ">=18"
   },
   "dependencies": {
     "react": "^19.2.4",
